@@ -1,7 +1,14 @@
 ------------------------------------------------------
+Release 1 | Beta 1 | Development 1 | Experimental 3
+
+* Added ImageEntity2D
+* Added Animation2D
+* Added AnimationTest2D
+
+------------------------------------------------------
 Release 1 | Beta 1 | Development 1 | Experimental 2
 
-* Added new control binding saving/loading
+* Added a new control binding saving/loading system
 
 ------------------------------------------------------
 Release 1 | Beta 1 | Development 1 | Experimental 1
